comments and status functionality

--- a/blog/app/views/articles/_form.html.erb
+++ b/blog/app/views/articles/_form.html.erb
@@ -16,6 +16,12 @@
   </div>
 
   <div>
+  	<%= form.label :status %>
+  	<%= form.select :status, Visible::VALID_STATUSES, 
+  	selected: article.status or "public" %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
