--- a/blog/app/views/comments/_comment.html.erb
+++ b/blog/app/views/comments/_comment.html.erb
@@ -6,5 +6,13 @@
 	<p>
 		<%= comment.body %>
 	</p>
+
+	<p>
+		<%= link_to "Delete Comment", [comment.article, comment], 
+		data: {
+			turbo_method: :delete,
+			turbo_confirm: "Are you sure?"
+		} %>
+	</p>
 <% end %>
 
